--- a/new.html
+++ b/new.html
@@ -7,3 +7,7 @@
     <title>Web Design Mastery | Welcome Back</title>
   </head>
   <body>
+         <div class="container">
+      <div class="content">
+        <h1>Welcome Back</h1>
+        <p>Please enter your details.</p>
