--- a/new.html
+++ b/new.html
@@ -11,3 +11,9 @@
       <div class="content">
         <h1>Welcome Back</h1>
         <p>Please enter your details.</p>
+
+        <form action="/">
+          <div class="input__group">
+            <label for="email">E-mail</label>
+            <input type="email" placeholder="Enter your e-mail" />
+          </div>
