--- a/new.html
+++ b/new.html
@@ -17,3 +17,8 @@
             <label for="email">E-mail</label>
             <input type="email" placeholder="Enter your e-mail" />
           </div>
+          
+        <div class="input__group">
+            <label for="password">Password</label>
+            <input type="password" placeholder="Enter your password" />
+          </div>
