--- a/new.html
+++ b/new.html
@@ -22,3 +22,11 @@
             <label for="password">Password</label>
             <input type="password" placeholder="Enter your password" />
           </div>
+
+        <div class="actions">
+            <div>
+              <input type="checkbox" />
+              <span>Remember me</span>
+            </div>
+            <a href="#">Forgot your password?</a>
+          </div>
