--- a/new.html
+++ b/new.html
@@ -30,3 +30,11 @@
             </div>
             <a href="#">Forgot your password?</a>
           </div>
+
+        <button type="submit">Log In</button>
+        </form>
+        <p>Don't have an account? <a href="#">Register here</a></p>
+      </div>
+    </div>
+  </body>
+</html>
